--- a/children/wNXM.json
+++ b/children/wNXM.json
@@ -13,7 +13,11 @@
       "0xeff039c3c1d668f408d09dd7b63008622a77532c"
     ],
     "decimals": 8,
-    "modifiers": [],
+    "modifiers": [
+      {
+        "type": "Cream Lending"
+      }
+    ],
     "name": "crWNXM",
     "parent_asset": "wNXM",
     "type": "lent",
