--- a/children/wNXM.json
+++ b/children/wNXM.json
@@ -22,5 +22,25 @@
     "parent_asset": "wNXM",
     "type": "lent",
     "value_index": 0
+  },
+  {
+    "balance_func": [
+      "borrowBalanceCurrent(address)",
+      [
+        {
+          "address": "$userAddress"
+        }
+      ],
+      [
+        "uint256"
+      ],
+      "0xeff039c3c1d668f408d09dd7b63008622a77532c"
+    ],
+    "decimals": 18,
+    "modifiers": [],
+    "name": "Cream Borrowed wNXM",
+    "parent_asset": "wNXM",
+    "type": "borrowed",
+    "value_index": 0
   }
 ]
