--- a/children/SNX.json
+++ b/children/SNX.json
@@ -17,7 +17,8 @@
     "name": "aSNX",
     "parent_asset": "SNX",
     "type": "lent",
-    "value_index": 0
+    "value_index": 0,
+    "protocol": "Aave"
   },
   {
     "balance_func": [
@@ -41,7 +42,8 @@
     "name": "Aave Borrowed SNX",
     "parent_asset": "SNX",
     "type": "borrowed",
-    "value_index": 1
+    "value_index": 1,
+    "protocol": "Aave"
   },
   {
     "balance_func": [
@@ -61,7 +63,8 @@
     "name": "aSNX V2",
     "parent_asset": "SNX",
     "type": "lent",
-    "value_index": 0
+    "value_index": 0,
+    "protocol": "Aave"
   },
   {
     "balance_func": [
@@ -81,7 +84,8 @@
     "name": "Stable Rate Aave V2 Borrowed SNX",
     "parent_asset": "SNX",
     "type": "borrowed",
-    "value_index": 0
+    "value_index": 0,
+    "protocol": "Aave"
   },
   {
     "balance_func": [
@@ -101,6 +105,7 @@
     "name": "Variable Rate Aave V2 Borrowed SNX",
     "parent_asset": "SNX",
     "type": "borrowed",
-    "value_index": 0
+    "value_index": 0,
+    "protocol": "Aave"
   }
 ]
